--- a/css/style.css
+++ b/css/style.css
@@ -9,92 +9,150 @@ body{
     font-family: "Poppins", sans-serif;
 }
 
-header nav{
-    background-color: #ffffff;
-    font-size: 1.125rem;
-    width: 100%;
-    height: 4.375rem;
-    color: #470063;
-    border-bottom: .1875rem solid #470063;
-}
-
 a{
     text-decoration: none;
     color: #470063;
 }
 
 .navBar{
+    background-color: #ffffff;
+    font-size: 1.125rem;
+    width: 100%;
+    height: 4.375rem;
+    color: #470063;
+    border-bottom: .1875rem solid #470063;
     list-style: none;
     display: flex;
     justify-content: space-between;
+    padding: .625rem 1.875rem;
 }
 
 .navBar div{
     display: flex;
-    gap: 1.875rem;
+    gap: 1.5625rem;
     align-items: center;
 }
 
-.logo{
-    justify-content: center;
-    align-items: end;
+.navBar .logo{
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+    top: 1.4375rem;
 }
 
-.gridContainer{
+/* Seccion Principal*/
+
+.sectionPrincipal{
+    width: 100%;
+    height: 33.125rem;
+    background-image: url("../assets/img/fotoPrincipal.png");
+    color: #470063;
+    font-size: 1.875rem;
+    font-weight: 400;
     display: grid;
+    place-items: center;
+    grid-template-rows: repeat(3,1fr);
+    grid-template-columns: repeat(3,1fr);
 }
 
 h1{
     color: #FF1D79;
     font-size: 3rem;
+    font-weight: 400;
+    grid-row: 1/2;
+    grid-column: 1/3;
+    align-self: end;
 }
 
-.sectionPrincipal{
-    width: 100%;
-    height: 33.125rem;
-    background-color: antiquewhite;
-    background-image: url("../assets/img/fotoPrincipal.png");
-    color: #470063;
-    font-size: 1.875rem;
+.texto{
+    grid-row: 2/3;
+    grid-column: 1/3;
 }
 
-.sectionPrincipal button{
+.buttons {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    grid-row: 3/4;
+    grid-column: 1/3;
+    align-self: self-start;
+  }
+
+.sectionPrincipal .btnSecondary{
+    display: flex;
+    width: 17.4375rem;
+    height: 3.75rem;
+    justify-content: center;
+    align-items: center;
     font-size: 1.125rem;
     color:#470063;
-    padding: 18px;
     border: .125rem solid #470063;
+    padding: 18px;
     border-radius: 1.25rem;
     box-shadow: .25rem .25rem .25rem #555555;
+    background-color: rgba(15, 10, 10, 0);
     font-family: "Poppins", sans-serif;
+    cursor: pointer;
 }
 
-.sectionPrincipal .buttonPrincipal{
+.sectionPrincipal .btnPrimary{
+    display: flex;
+    width: 17.4375rem;
+    height: 3.75rem;
+    justify-content: center;
+    align-items: center;
     font-size: 1.125rem;
     background-color: #FF1D79;
     color:white;
+    padding: 18px;
+    border-radius: 1.25rem;
+    box-shadow: .25rem .25rem .25rem #555555;
     border: .125rem solid #FF1D79;
     font-family: "Poppins", sans-serif;
+    cursor: pointer;
 }
+
+/* Seccion Coleccion*/
 
 .sectionColeccion{
     background-color: #EAE8FF;
     font-family: "Poppins", sans-serif;
+    width: 100%;
+    padding: 1.875rem;
+    display: grid;
+    grid-template-rows: repeat(62.5rem 1fr 62.5rem 1fr 62.5rem 1fr 62.5rem);
+    grid-template-columns: repeat(1,1fr);
 }
 
 .tituloColeccion{
     text-align: center;
     color:#470063;
     font-size: 3rem;
+    padding: 2.5rem;
 }
 
-.sectionColeccion{
-    width: 100%;
+.textoCard{
+    font-family: "Poppins", sans-serif;
+    color:#470063;
+    font-size: 1.875rem;
+    writing-mode: vertical-lr;
+    transform: rotateZ(180deg);
 }
 
 .productos{
     width: 100%;
     display:flex;
     justify-content: space-evenly;
+    gap: 1.25rem;
+}
+
+.tituloProducto{
+    display:flex;
+    color:#FF1D79;
+    font-size: 1.375rem;
+    align-items: left;
+    justify-content: left;
 }
 
 .card{
@@ -102,12 +160,169 @@ h1{
     width: 22rem;
     height: 23.125rem;
     text-align: center;
+    border-radius: 1.25rem;
+    cursor: pointer;
 }
 
 .cardImg{
     object-fit: contain;
     font-family: "Poppins", sans-serif;
     font-size: 3rem;
+    padding: .3125rem;
 }
 
-@media (max-width:64rem){}
+.cardDescripcion{
+    display:flex;
+    justify-content: space-around;
+}
+
+.precioProducto{
+    display:flex;
+    justify-content: flex-start;
+    padding: 0px 0px 0px 50px;
+}
+
+.anuncio{
+    position: relative;
+}
+
+.cartel{
+    display: flex;
+    background-color: #470063;
+    width: 14.5625rem;
+    height: 2.0625rem;
+    font-family: "Poppins", sans-serif;
+    color: #ffffff;
+    font-style: italic;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1.25rem 1.25rem 0rem 0rem;
+    position: absolute;
+    top: -2.0625rem; 
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.cestaCard{
+    background-color: #FF1D79;
+    width: 2.0625rem;
+    height: 2.0625rem;
+    border-radius: 30px;
+    border:0rem;
+    cursor: pointer;
+}
+
+.btnVerMas{
+    display: flex;
+    width: 9.3125rem;
+    height: 2.875rem;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.125rem;
+    background-color: #FF1D79;
+    color:white;
+    padding: 18px;
+    border-radius: 1.25rem;
+    box-shadow: .25rem .25rem .25rem #555555;
+    border: .125rem solid #FF1D79;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+} 
+
+@media (max-width:1024px){
+    .coleccion{
+        display:none
+    }
+    .testimonios{
+        display:none
+    }
+    .presentacion{
+        display:none
+    }
+    .contacto{
+        display:none
+    }
+    .procesos{
+        display:none
+    }
+    .cesta{
+        display:none
+    }
+    header{
+        width: 100%;
+        height: 4.375rem;
+    }
+
+    .sectionPrincipal{
+        width: 100%;
+        height: 33.125rem;
+        background-image: url("../assets/img/fotoPrincipal.png");
+        background-position: center;
+        color: #470063;
+        font-size: 1.625rem; 
+        font-weight: 400;
+        display: grid;
+        place-items: center;
+        grid-template-rows: repeat(3,1fr);
+        grid-template-columns: repeat(3,1fr);
+    }
+    
+    h1{
+        color: #FF1D79;
+        font-size: 2.75rem;
+        font-weight: 400;
+        grid-row: 1/2;
+        grid-column: 1/4;
+        align-self: end;
+    }
+    
+    .texto{
+        grid-row: 2/3;
+        grid-column: 1/4;
+    }
+
+    .buttons {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 20px;
+        grid-row: 3/4;
+        grid-column: 1/4;
+        align-self: self-start;
+      }
+    
+    .sectionPrincipal .btnSecondary{
+        display: flex;
+        width: 17.25rem;
+        height: 3.75rem;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.125rem;
+        color:#470063;
+        font-weight: 500;
+        border: .125rem solid #470063;
+        padding: 18px;
+        border-radius: 1.25rem;
+        box-shadow: .25rem .25rem .25rem #555555;
+        background-color: rgba(15, 10, 10, 0);
+        font-family: "Poppins", sans-serif;
+        cursor: pointer;
+    }
+    
+    .sectionPrincipal .btnPrimary{
+        display: flex;
+        width: 17.25rem;
+        height: 3.75rem;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.125rem;
+        background-color: #FF1D79;
+        color:white;
+        padding: 18px;
+        border-radius: 1.25rem;
+        box-shadow: .25rem .25rem .25rem #555555;
+        border: .125rem solid #FF1D79;
+        font-family: "Poppins", sans-serif;
+        cursor: pointer;
+    }
+}
