--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ a{
 .imgproducto{
     width: 100%;
 }
+
 /* Seccion Principal*/
 .btnMovilPrimary{
     display: none;
@@ -253,6 +254,115 @@ h1{
     font-family: "Poppins", sans-serif;
     cursor: pointer;
 } 
+
+/*PÁGINA DE ARETES*/
+.dropdown-toggle {
+    color: #470063;
+    font-size: 1.125rem;
+}
+
+.dropdown-menu {
+    width: 200%;
+    border-radius: 0.625rem;
+}
+
+nav ul div button.dropdown-toggle::after {
+    display: none;
+}
+
+nav ul div button.dropdown-toggle {
+    align-items: center;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.dropdown-toggle a {
+    text-decoration: none;
+    padding-left: 5%;
+}
+
+.dropdown-toggle a:hover {
+    color: #470063;
+}
+
+.dropdown-toggle i {
+    font-style: normal;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1.125rem;
+    font-weight:bold;
+}
+
+.dropdown-menu li {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: left;
+    padding-block: 0.5rem;
+}
+
+.dropdown-menu li a {
+    color: #FF1D79;
+    font-size: 1.125rem;
+    width: 60%;
+}
+
+.dropdown-menu li img {
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+.dropdown-item {
+    color: #FF1D79;
+    font-size: 1.125rem;
+}
+
+/* Seccion Aretes*/
+.earrings-main{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #EAE8FF;
+}
+
+.main-section {
+    width: 90%;
+    padding-block: 3%;
+}
+
+.main-section .title-section h1 {
+    font-weight: 500;
+    font-size: 2.66rem;
+}
+
+.main-section .filters-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 20%;
+}
+
+.main-section .filters-section p {
+    font-size: 1rem;
+    color: #363636;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+.main-section .filters-section .dropdown .dropdown-toggle{
+    font-size: 1rem;
+    color: #363636;
+}
+
+.main-section .products-section {
+    display: flex;
+    flex-direction: column;
+    padding-block: 3%;
+    gap: 4rem;
+}
+
 @media (max-width:1180px){
     .item3{
         display:none
