--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,7 @@
 @import "./layout/seccionPrincipal";
 @import "./layout/_seccionColeccion.scss";
 @import "./layout/paginaAretes";
+@import "./layout/footer";
 
 /*Carpeta components
 @import "./components/bootstrap";*/
@@ -23,3 +24,4 @@
 /*Media Querys*/
 @import "./layout/media/media1180";
 @import "./layout/media/mediamovil";
+
