--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,8 @@
 @import "./layout/seccionPrincipal";
 @import "./layout/_seccionColeccion.scss";
 @import "./layout/paginaAretes";
+@import "./layout/seccionFotografia";
+@import "./layout/seccionSlider";
 @import "./layout/footer";
 
 /*Carpeta components
@@ -24,4 +26,5 @@
 /*Media Querys*/
 @import "./layout/media/media1180";
 @import "./layout/media/mediamovil";
+
 
