--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /*border: 1px solid red;*/
 }
 
 @font-face {
@@ -65,8 +66,10 @@ header .imgproducto {
 
 .sectionPrincipal {
   background-image: url("../assets/img/fotoPrincipal.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
-  height: 33.125rem;
+  height: 38.75rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -301,6 +304,76 @@ nav ul div button.dropdown-toggle {
   gap: 4rem;
 }
 
+.sectionFotografia {
+  margin-bottom: 1.25rem;
+}
+.sectionFotografia .tituloFotografia {
+  font-size: 3rem;
+  text-align: center;
+  color: #470063;
+  font-style: italic;
+  margin-top: 50px;
+}
+.sectionFotografia .fotografias {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding: 1.875rem;
+}
+.sectionFotografia .fotografias .fotografia {
+  width: 29.5rem;
+  height: 27.5rem;
+  margin-bottom: 0.625rem;
+}
+
+.sectionSlider {
+  background-color: #470063;
+  padding: 1.25rem;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.sectionSlider .slide-track {
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+  animation: 20s slide infinite linear;
+  width: 2848px;
+}
+.sectionSlider .slide-track .slide {
+  display: flex;
+  flex-direction: row;
+}
+.sectionSlider .slide-track .slide .containerSlide {
+  display: flex;
+  flex-direction: row;
+}
+.sectionSlider .slide-track .slide .containerSlide .textoSlide {
+  color: aliceblue;
+  font-size: 1.875rem;
+  align-self: center;
+  margin: 10px 50px 10px 25px;
+}
+.sectionSlider .slide-track .slide .containerSlide .imgSlide {
+  width: 100%;
+}
+
+/*@keyframes slide{
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(-50%);
+    }
+}*/
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-1424px);
+  }
+}
 .sectionFooter {
   background-color: #EAE8FF;
 }
@@ -317,6 +390,7 @@ nav ul div button.dropdown-toggle {
 }
 .sectionFooter .articleFooter .divcontactoFooter .imgLogoFooter {
   padding-bottom: 0.9375rem;
+  padding-top: 15px;
 }
 .sectionFooter .articleFooter .divcontactoFooter .imgFooter {
   padding-right: 0.9375rem;
@@ -557,6 +631,9 @@ nav ul div button.dropdown-toggle {
   }
 }
 @media (max-width: 625px) {
+  .divNav {
+    width: 100%;
+  }
   .sectionPrincipal .navBar .dropdown {
     padding: 50px;
   }
@@ -661,6 +738,26 @@ nav ul div button.dropdown-toggle {
   }
   .sectionColeccion .card .tituloProducto {
     font-size: 1.125rem;
+  }
+  .sectionFotografia .tituloFotografia {
+    font-size: 24px;
+  }
+  .sectionFotografia .fotografias .fotografia {
+    width: 372px;
+    height: 340px;
+  }
+}
+@media (max-width: 400px) {
+  .sectionFotografia {
+    margin: 0;
+    padding: 0;
+  }
+  .sectionFotografia .fotografias {
+    padding: 1px;
+  }
+  .sectionFotografia .fotografias .fotografia {
+    width: 302px;
+    height: 270px;
   }
 }
 
