--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,6 +17,8 @@
 @import "./layout/paginaAretes";
 @import "./layout/seccionFotografia";
 @import "./layout/seccionSlider";
+@import "./layout/sectionTestimonios";
+@import "./layout/sectionCompra";
 @import "./layout/footer";
 
 /*Carpeta components
