--- a/css/style.css
+++ b/css/style.css
@@ -374,6 +374,100 @@ nav ul div button.dropdown-toggle {
     transform: translateX(-1424px);
   }
 }
+.sectionTestimonios {
+  padding: 0.625rem;
+}
+.sectionTestimonios .tituloTestimonios {
+  color: #470063;
+  font-size: 3rem;
+  text-align: center;
+  padding: 1.25rem;
+}
+.sectionTestimonios .cardTestimonios {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+.sectionTestimonios .cardCompleta {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+.sectionTestimonios .divTestimonios {
+  background-color: #EAE8FF;
+  width: 15.875rem;
+  height: 25rem;
+  border-radius: 0.9375rem;
+  padding: 20px;
+}
+.sectionTestimonios .divTestimonios .textoCardTestimonios {
+  color: #470063;
+  font-size: 1.125rem;
+}
+.sectionTestimonios .divTestimonios .nombre {
+  color: #FF1D79;
+  font-size: 1.125rem;
+  font-weight: 700;
+}
+.sectionTestimonios .divTestimonios .fotoCliente {
+  margin-bottom: 0.625rem;
+}
+
+.sectionCompra {
+  padding: 1.25rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1fr);
+}
+.sectionCompra .linea {
+  height: 6px;
+  width: 100%;
+  background-color: #FF1D79;
+  grid-row: 2/3;
+  grid-column: 1/3;
+  align-self: center;
+  border-radius: 20px;
+  opacity: 100;
+}
+.sectionCompra .tituloCompra {
+  color: #FF1D79;
+  font-size: 3rem;
+  text-align: center;
+  grid-row: 1/2;
+  grid-column: 1/3;
+}
+.sectionCompra .contenedorCompra {
+  grid-row: 2/3;
+  grid-column: 1/3;
+  justify-items: center;
+}
+.sectionCompra .contenedorCompra .cardCompra {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 55px;
+  background-color: #FF1D79;
+  width: 700px;
+  height: 190px;
+  border-radius: 3.125rem;
+}
+.sectionCompra .contenedorCompra .cardCompra .divCompra {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.sectionCompra .contenedorCompra .cardCompra .divCompra .textoCompra {
+  color: white;
+  font-size: 1.125rem;
+}
+
 .sectionFooter {
   background-color: #EAE8FF;
 }
@@ -457,13 +551,16 @@ nav ul div button.dropdown-toggle {
 }
 
 /*Media Querys*/
-@media (max-width: 1180px) {
+@media (max-width: 1188px) {
   .sectionColeccion .productos {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 0.9375rem;
+  }
+  .sectionTestimonios .ultima {
+    display: none;
   }
 }
 @media (max-width: 1130px) {
@@ -527,9 +624,6 @@ nav ul div button.dropdown-toggle {
   }
 }
 @media (max-width: 834px) {
-  .sectionColeccion .tituloColeccion {
-    font-size: 2.125rem;
-  }
   .sectionColeccion .contenedorbtn .btnVerMas {
     width: 8.0625rem;
     height: 1.25rem;
@@ -557,6 +651,58 @@ nav ul div button.dropdown-toggle {
   }
   .earrings-main .sectionColeccion .tituloAretes h2 {
     font-size: 34px;
+  }
+  .sectionSlider .slide-track {
+    height: 40px;
+  }
+  .sectionSlider .slide-track .slide .containerSlide .textoSlide {
+    font-size: 1.125rem;
+    margin: 10px 50px 10px 25px;
+  }
+  .sectionTestimonios {
+    padding: 5px;
+  }
+  .sectionTestimonios .cardTestimonios {
+    gap: 8px;
+  }
+  .sectionTestimonios .divTestimonios {
+    width: 200px;
+    height: 310px;
+    padding: 15px;
+  }
+  .sectionTestimonios .divTestimonios .piedeTestimonios {
+    display: flex;
+    flex-direction: row;
+  }
+  .sectionTestimonios .divTestimonios .piedeTestimonios .piedeTestimonios2 {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+  }
+  .sectionTestimonios .divTestimonios .textoCardTestimonios {
+    font-size: 16px;
+    margin-bottom: 3px;
+  }
+  .sectionTestimonios .divTestimonios .nombre {
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+  .sectionTestimonios .divTestimonios .fotoCliente {
+    margin-bottom: 5px;
+    margin-right: 20px;
+    width: 55px;
+    height: 55px;
+  }
+  .sectionCompra .contenedorCompra .cardCompra {
+    width: 500px;
+    height: 150px;
+  }
+  .sectionCompra .contenedorCompra .cardCompra .divCompra .textoCompra {
+    font-size: 1.125rem;
+  }
+  .sectionCompra .contenedorCompra .cardCompra .divCompra .imgCompra {
+    width: 84px;
+    height: 84px;
   }
 }
 @media (max-width: 635px) {
@@ -628,6 +774,26 @@ nav ul div button.dropdown-toggle {
     left: 50%;
     transform: translateX(-50%);
     font-size: 14px;
+  }
+  .sectionTestimonios .tituloTestimonios {
+    font-size: 2.125rem;
+  }
+  .sectionTestimonios .penultima {
+    display: none;
+  }
+  .sectionCompra .tituloCompra {
+    font-size: 2.125rem;
+  }
+  .sectionCompra .contenedorCompra .cardCompra {
+    width: 450px;
+    height: 150px;
+  }
+  .sectionCompra .contenedorCompra .cardCompra .divCompra .textoCompra {
+    font-size: 16px;
+  }
+  .sectionCompra .contenedorCompra .cardCompra .divCompra .imgCompra {
+    width: 80px;
+    height: 80px;
   }
 }
 @media (max-width: 625px) {
