--- a/css/style.css
+++ b/css/style.css
@@ -775,6 +775,13 @@ nav ul div button.dropdown-toggle {
     transform: translateX(-50%);
     font-size: 14px;
   }
+  .sectionFotografia .tituloFotografia {
+    font-size: 34px;
+  }
+  .sectionFotografia .fotografias .fotografia {
+    width: 372px;
+    height: 340px;
+  }
   .sectionTestimonios .tituloTestimonios {
     font-size: 2.125rem;
   }
@@ -796,7 +803,7 @@ nav ul div button.dropdown-toggle {
     height: 80px;
   }
 }
-@media (max-width: 625px) {
+@media (max-width: 500px) {
   .divNav {
     width: 100%;
   }
@@ -908,9 +915,29 @@ nav ul div button.dropdown-toggle {
   .sectionFotografia .tituloFotografia {
     font-size: 24px;
   }
-  .sectionFotografia .fotografias .fotografia {
-    width: 372px;
-    height: 340px;
+  .sectionTestimonios .tituloTestimonios {
+    font-size: 24px;
+  }
+  .sectionCompra .tituloCompra {
+    font-size: 24px;
+  }
+  .sectionCompra .contenedorCompra .cardCompra {
+    width: 290px;
+    height: 100px;
+    border-radius: 15px;
+    gap: 20px;
+  }
+  .sectionCompra .contenedorCompra .cardCompra .compra1 {
+    display: none;
+  }
+  .sectionCompra .contenedorCompra .cardCompra .divCompra .textoCompra {
+    margin: 0px;
+    margin-bottom: 5px;
+  }
+  .sectionCompra .contenedorCompra .cardCompra .divCompra .imgCompra {
+    width: 60px;
+    height: 60px;
+    margin: 5px 0px 0px 0px;
   }
 }
 @media (max-width: 400px) {
@@ -924,6 +951,9 @@ nav ul div button.dropdown-toggle {
   .sectionFotografia .fotografias .fotografia {
     width: 302px;
     height: 270px;
+  }
+  .sectionTestimonios .antepenultima {
+    display: none;
   }
 }
 
