--- a/scss/layout/media/_media1180.scss
+++ b/scss/layout/media/_media1180.scss
@@ -256,6 +256,19 @@
             font-size: 14px;
         }
     }
+
+    .sectionFotografia{
+        .tituloFotografia{
+            font-size: 34px;
+        }
+        .fotografias{
+            .fotografia{
+                width: 372px;
+                height: 340px;
+            }
+        }
+    }
+
     .sectionTestimonios{
         .tituloTestimonios{
             font-size: 2.125rem;
