--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,6 +20,7 @@
 @import "./layout/sectionTestimonios";
 @import "./layout/sectionCompra";
 @import "./layout/footer";
+@import "./layout/paginaContacto";
 
 /*Carpeta components
 @import "./components/bootstrap";*/
