--- a/scss/layout/_seccionColeccion.scss
+++ b/scss/layout/_seccionColeccion.scss
@@ -2,9 +2,12 @@
 .btnMovilVerMas{
     display: none;
 }
-.imgproducto{
-    width: 100%;
+.cardImg{
+    .imgproducto{
+        width: 100%;
+    }
 }
+
 .sectionColeccion{
     background-color: #EAE8FF;
     font-family: "Poppins", sans-serif;
