--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,6 +21,7 @@
 @import "./layout/sectionCompra";
 @import "./layout/footer";
 @import "./layout/paginaContacto";
+@import "./layout/paginaPresentacion";
 
 /*Carpeta components
 @import "./components/bootstrap";*/
