--- a/scss/layout/_seccionFotografia.scss
+++ b/scss/layout/_seccionFotografia.scss
@@ -1,5 +1,6 @@
 .sectionFotografia{
     margin-bottom: 1.25rem;
+    font-family: "Poppins", sans-serif;
     .tituloFotografia{
         font-size: map-get($medidas, titulo);
         text-align: center;
