--- a/scss/layout/_seccionSlider.scss
+++ b/scss/layout/_seccionSlider.scss
@@ -1,5 +1,6 @@
 .sectionSlider{
     background-color: map-get($color, primario);
+    font-family: "Poppins", sans-serif;
     padding: 1.25rem;
     overflow: hidden;
     white-space: nowrap;
