--- a/scss/layout/_paginaContacto.scss
+++ b/scss/layout/_paginaContacto.scss
@@ -1,5 +1,6 @@
 .sectionContacto{
     padding: 40px;
+    font-family: "Poppins", sans-serif;
     .articleContacto{
         @include flex(column, center, center, 5px);
         .tituloContacto{
