--- a/scss/layout/_seccionPrincipal.scss
+++ b/scss/layout/_seccionPrincipal.scss
@@ -7,6 +7,7 @@
     height: 38.75rem;
     @include grid(repeat(3,1fr), repeat(3,1fr));
     place-items: center;
+    font-family: "Poppins", sans-serif;
 
     .btnMovilPrimary, .btnMovilSecondary{
         display: none;
