--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,6 +22,7 @@
 @import "./layout/footer";
 @import "./layout/paginaContacto";
 @import "./layout/paginaPresentacion";
+@import "./layout/paginaProcesos";
 
 /*Carpeta components
 @import "./components/bootstrap";*/
